--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "express-local-records",
   "version": "0.0.0",
+  "engines": {
+    "node": "11.3.0"
+  },
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
