--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "async": "^2.6.1",
     "compression": "^1.7.3",
     "cookie-parser": "~1.4.4",
+    "cors": "^2.8.5",
     "debug": "~2.6.9",
     "express": "~4.16.0",
     "express-validator": "^5.3.1",
