--- a/.gitignore
+++ b/.gitignore
@@ -35,6 +35,9 @@ bower_components
 # Compiled binary addons (https://nodejs.org/api/addons.html)
 build/Release
 
+# BFG Repo-Cleaner
+replacements.txt
+
 # Dependency directories
 node_modules/
 jspm_packages/
