--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
+    "start_local": "node -r dotenv/config ./bin/www",
     "devstart": "nodemon ./bin/www"
   },
   "dependencies": {
@@ -17,20 +18,22 @@
     "debug": "~2.6.9",
     "express": "~4.16.0",
     "express-validator": "^5.3.1",
-    "helmet": "^3.20.1",
+    "helmet": "^3.21.2",
     "http-errors": "~1.6.2",
     "moment": "^2.24.0",
-    "mongoose": "^5.6.11",
+    "mongoose": "^5.8.11",
     "morgan": "~1.9.0",
-    "pug": "^2.0.4"
+    "pug": "^2.0.4",
+    "serve-favicon": "^2.5.0"
   },
   "devDependencies": {
+    "dotenv": "^8.2.0",
     "eslint": "^5.16.0",
     "eslint-config-airbnb-base": "^13.2.0",
     "eslint-config-prettier": "^3.6.0",
-    "eslint-plugin-import": "^2.18.2",
-    "eslint-plugin-prettier": "^3.1.0",
-    "nodemon": "^1.19.1",
-    "prettier": "^1.18.2"
+    "eslint-plugin-import": "^2.20.1",
+    "eslint-plugin-prettier": "^3.1.2",
+    "nodemon": "^1.19.4",
+    "prettier": "^1.19.1"
   }
 }
